--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Nitin Bhojwani</title>
-  <base href="/">
-
+  <base href="https://nitinbhojwani.github.io">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 <link rel="stylesheet" href="styles.35435f83243a62d7a6e4.css"></head>
